[package]
name = "usdy_solana_tracker"
version = "0.1.0"
edition = "2021"

[lib]
name = "usdy_solana_tracker"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-solana = "0.5"
substreams-database-change = "1.3"
substreams-entity-change = "1.3"
substreams-solana-program-instructions = "0.2"
prost = "0.11"
prost-types = "0.11"
bs58 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
log = "0.4"
anyhow = "1.0"

[build-dependencies]
substreams-solana-core = "0.5"
tonic-build = "0.9"

[profile.release]
opt-level = 's'
lto = true
strip = true

[[bin]]
name = "usdy_solana_tracker"
path = "src/main.rs"
required-features = []

[workspace]
members = ["."]