[package]
name = "usdy_solana_tracker"
version = "0.1.0"
edition = "2021"

[lib]
name = "usdy_solana_tracker"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.6"
substreams-database-change = "1.3"
substreams-entity-change = "1.3"
substreams-solana = "0.14"
bs58 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
log = "0.4"
anyhow = "1.0"
prost = "0.13"
prost-types = "0.13"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
substreams-solana-core = "0.14"
prost-build = "0.13"

[profile.release]
opt-level = 's'
lto = true
strip = true

[workspace]
members = ["."]
